back to backsub 50G and removed v

--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -36,7 +36,7 @@ modules:
   background:
       name: backsub
       container: ghcr.io/schapirolabor/background_subtraction
-      version: v0.4.1
+      version: 0.4.1
       cmd: |-
         python3 /background_subtraction/background_sub.py \
           -r ${image} -m ${marker} \
