singularity_WSI profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -55,8 +55,44 @@ profiles {
       }
     }
   }
-// worker seems to be many things, for once it means segmentation with mesmer,
 
+  singularity_WSI {
+    includeConfig 'config/nf/singularity.config'
+    process {
+      process {
+        withName:illumination   {
+          time   = '6h'
+          memory = '64G'
+        }
+        withName:coreograph     {
+          time   = '12h'
+          memory = '128G'
+        }
+        withName:ashlar         {
+          time   = '12h'
+          memory = '64G'
+        }
+        withName:backsub        {
+          time  = '10h'
+          memory = '128G'
+        }
+        withName:mesmer         {
+          cpus   = 4
+          time   = '12h'
+          memory = '230G'
+        }
+        withName:mcquant        {
+          time   = '4h'
+          memory = '128G'
+        }
+        withName:worker         {
+          cpus   = 4
+          time   = '12h'
+          memory = '230G'
+        }
+      }
+    }
+  }
 
   // Profile specific to the HMS compute cluster
   O2 {
