add executor='sge'to new profile

--- a/nextflow.config
+++ b/nextflow.config
@@ -59,6 +59,7 @@ profiles {
   singularity_WSI {
     includeConfig 'config/nf/singularity.config'
     process {
+        executor = 'sge'
         withName:illumination   {
           time   = '6h'
           memory = '64G'
