switch to ashlar 1.18.0

--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -25,8 +25,8 @@ modules:
     version: 1.1.1
   registration:
     name: ashlar
-    container: josenimo/jose_ashlar
-    version: 1.17.1
+    container: labsyspharm/ashlar
+    version: 1.18.0
   dearray:
     name: coreograph
     container: labsyspharm/unetcoreograph
