Update nextflow.config to use SLURM

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,7 @@ profiles {
 
     process {
 
-      executor = 'sge'
+      executor = 'slurm'
 
       withName:illumination   {
         time   = '5h'
