--- a/config/defaults.yml
+++ b/config/defaults.yml
@@ -22,11 +22,11 @@ modules:
   illumination:
     name: basic
     container: labsyspharm/basic-illumination
-    version: 1.1.1
+    version: 1.4.0
   registration:
     name: ashlar
-    container: labsyspharm/ashlar
-    version: 1.18.0
+    container: josenimo/jose_ashlar
+    version: 1.19.0
   dearray:
     name: coreograph
     container: labsyspharm/unetcoreograph
